<resources>
    <string name="app_name">BMICalculator</string>
    <string name="title_home">Home</string>
    <string name="title_BMI">BMI</string>
    <string name="title_calories">BMR</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_chart">Chart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate">Calculate</string>
    <string name="height_in_cm">cm</string>
    <string name="weight_in_kg">kg</string>
    <string name="title">BMI</string>
    <string name="result">BMI: %.2f</string>
    <string name="calories_result">BMR: %.2f</string>
    <string name="calories_calculator">BMR</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="recipe1_title">PIZZA</string>
    <string name="recipe2_title">Sernik tradycyjny</string>
    <string name="recipe1_content">
        Świeże drożdże ocieplić w temperaturze pokojowej. Przygotować rozczyn: drożdże rozpuścić w ciepłej wodzie, dodać 2 łyżki mąki oraz cukier, dokładnie wymieszać i odstawić na ok. 10 minut do wyrośnięcia (rozczyn ze świeżych drożdży zwiększa objętość o ok. 3 razy - jeśli tak się nie stanie proces przygotowania rozczynu trzeba powtórzyć od nowa, natomiast rozczyn z drożdży instant może się tylko trochę spienić).
Mąkę przesiać do miski, wymieszać z solą, zrobić wgłębienie w środku i wlać w nie rozczyn. Sukcesywnie zagarniać łyżką mąkę do środka i przez 2 - 3 minuty mieszać składniki, pod koniec dodając jeszcze oliwę.
Połączone składniki wyłożyć na stolnicę oprószoną mąką. Wyrabiać przez ok. 15 minut aż ciasto będzie elastyczne i gładkie (ciasto można też zagnieść mikserem planetarnym).
Wyrobione ciasto włożyć do dużej miski, przykryć ściereczką i odstawić na ok. 1 godzinę do wyrośnięcia.
Wyrośnięte ciasto wyjąć na stolnicę i chwilę pozagniatać. Podzielić na 2 części, uformować z nich kulki i odłożyć na ok. 7 minut pod ściereczką.
Blaszki (tortownice) posmarować oliwą. Włożyć na środek kulkę ciasta, delikatnie spłaszczyć i rozciągać, rozprowadzając palcami po całej powierzchni dna, zaczynając od środka i zostawiając niewielki "wałeczek" na brzegu (zob. zdjęcia poniżej). UWAGA: najlepiej robić to kilkoma etapami, ciasto na początku sprężynuje i "cofa się" ale jeśli odczekamy chwilę będziemy mogli je dalej rozciągać.
Wyłożyć cienką warstwę SOSU POMIDOROWEGO, ser* oraz ulubione dodatki. Odczekać ok. 15 minut aż ciasto podrośnie, następnie piec w maksymalnie nagrzanym piekarniku (min. 250 st. C) przez ok. 10 minut.
    </string>
    <string name="recipe2_content">
        Miękkie masło ubić na puszysto, stopniowo dodawać po jednym żółtku na przemian z łyżką cukru pudru, cały czas dokładnie ubijając składniki.
Zmniejszyć obroty miksera do średnich, dodać zmielony ser i połączyć. Teraz dodawać po kolei: cukier wanilinowy, śmietankę oraz mąkę ziemniaczaną cały czas miksując składniki na jednolitą masę. Na koniec wymieszać (delikatnie, ale dokładnie) z ubitymi na sztywno białkami.
Przygotować tortownicę o średnicy minimum 26 cm (mierzona od środka). Posmarować ją masłem i wysypać bułką tartą lub mielonymi migdałami lub dno wyłożyć papierem do pieczenia.
Masę serową wyłożyć do tortownicy i wstawić do piekarnika nagrzanego do 170 stopni C. Piec przez 60 minut. Sernik studzić stopniowo wyjmując z piekarnika (najpierw po trochu otwierając drzwiczki i lekko wysuwając sernik, w końcu wyjąć z piekarnika). Zrumieniony wierzch sernika posypać cukrem pudrem lub polać polewą czekoladową.
    </string>
    <string name="quiz">Quiz</string>
    <string name="see_stats_here">See stats here</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="question_text">Question Text</string>
    <string name="correct_text">Correct!</string>
    <string name="incorrect_text">InCorrect!</string>
    <string name="first_score_text">Correct!</string>
    <string name="correct_toast_message">Correct!</string>
    <string name="incorrect_toast_message">InCorrect!</string>
    <string name="q1">Is consuming a high amount of processed foods bad for your health?</string>
    <string name="q2">Should you limit your intake of saturated fats for a healthy diet?</string>
    <string name="q3">Is it important to get enough sleep for good health?</string>
    <string name="q4">Should you eat a variety of fruits and vegetables for a healthy diet?</string>
    <string name="q5">Is smoking harmful to your health?</string>
    <string name="q6">Is it important to stay hydrated for good health?</string>

</resources>