<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_BMI"
        android:name="com.example.myapplication.ui.bmi.BMIFragment"
        android:label="@string/title_BMI"
        tools:layout="@layout/fragment_bmi" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.calories.CaloriesFragment"
        android:label="@string/title_calories"
        tools:layout="@layout/fragment_calories" />
    <fragment
        android:id="@+id/recipeFragment"
        android:name="com.example.myapplication.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" />
</navigation>