<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btntrue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="70dp"
    tools:context=".ui.quiz.QuizFragment">


    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|center_horizontal"
        android:text="@string/question_text"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/quizPB"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.5" />

    <TextView
        android:id="@+id/txtQuizStats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|center_horizontal"
        android:text="@string/see_stats_here"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnTrue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/true_button"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnFalse"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/false_button"
        android:textColor="#fff" />

</LinearLayout>